css flexbox alignment fix 1.0

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 .list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     
 }
 
@@ -9,9 +9,9 @@
     border: 5px solid slateblue;
     padding: 10px;
     margin: 15px;
-    
+    flex-basis: 25%;
     text-align: center;
-    
+    align-self: center;
 }
 
 header {
